@@ -4,9 +4,9 @@
 extern std::vector<CreatureInfo*> ActiveCreatures;
 
 void InitialiseLOTarray(int allocMem);
-int EnableEntityAI(short itemNum, int always, bool makeTarget = true);
+bool EnableEntityAI(short itemNum, bool always, bool makeTarget = true);
 void InitialiseSlot(short itemNum, bool makeTarget);
-void SetBaddyTarget(short itemNum, short target);
+void SetEntityTarget(short itemNum, short target);
 void DisableEntityAI(short itemNumber);
 void ClearLOT(LOTInfo* LOT);
 void CreateZone(ItemInfo* item);
