@@ -2,6 +2,7 @@ Version 1.0.6
 =============
 
 * Fix major pathfinding bug which could have caused lots of issues with enemy behaviour.
+* Fix savegame crash for disabled enemies with partially set activation mask.
 * Fix invisible Lara after starting a new game from title flyby with hidden Lara.
 * Fix backholster weapons not updating their sound position together with player.
 * Fix the double activation of TR4 seth blades when used an OCB different than 0.
